<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title_string">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="button_spotify_string">Spotify Streamer</string>
    <string name="score_app_string">Scores app</string>
    <string name="library_app_string">Library app</string>
    <string name="build_it_bigger_string">Build it bigger</string>
    <string name="bacon_reader_string">bacon reader</string>
    <string name="capstone_string">Capstone: my own app</string>
    <string name="message_toast">This button will launch %s app!</string>
</resources>
