<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@color/background_color">

    <TextView
        android:text="@string/title_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title_color"
        android:textSize="@dimen/title_size"
        android:id="@+id/title"/>

    <Button
        style="@style/Button"
        android:text="@string/button_spotify_string"
        android:id="@+id/spotify"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"/>

    <Button
        style="@style/Button"
        android:text="@string/score_app_string"
        android:id="@+id/scores_app"
        android:layout_below="@+id/spotify"/>
    <Button
        style="@style/Button"
        android:text="@string/library_app_string"
        android:id="@+id/library_app"
        android:layout_below="@+id/scores_app"/>
    <Button
        style="@style/Button"
        android:text="@string/build_it_bigger_string"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/library_app"/>
    <Button
        style="@style/Button"
        android:text="@string/bacon_reader_string"
        android:id="@+id/bacon_reader"
        android:layout_below="@+id/build_it_bigger"/>
    <Button
        style="@style/Button"
        android:text="@string/capstone_string"
        android:id="@+id/capstone"
        android:layout_below="@+id/bacon_reader"
        android:background="@color/capstone_button_color"/>

</RelativeLayout>
